# snake

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/include/: config.hpp  drawable.hpp  fruits.hpp  game.hpp  logic.hpp  snake.hpp
